Add static layout model